--- a/graphic.html
+++ b/graphic.html
@@ -138,7 +138,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.7.1/dist/muuri.min.js"></script>
-  <script> var grid = new Muuri('.grid'); var grid = new Muuri('.grid', {dragEnabled: false});</script>
+  <script>$(window).bind("load", function() {
+var grid = new Muuri('.grid'); var grid = new Muuri('.grid', {dragEnabled: false});
+});</script>
   
 
 </body>
