--- a/juvo.html
+++ b/juvo.html
@@ -45,6 +45,10 @@
         <h2>CHI Student Competition Project</h2>
         <p>Student-athletes usually experience psychological issues during their injured period, which play important roles in their rehabilitation. The three major challenges are the loss of identity, isolation, and inability to understand and communicate their recovery progress between checkups. 
         To assist the injured athletes, we propose AthleteJuvo, a collaborative gaming solution incorporating routine rehabilitation exercises, team competition, and social supports. Specifically, AthleteJuvo utilizes the competitive nature of athletes to gamify the rehabilitation process. Athletes rebuild their identity by forming a team with other injured athletes to compete with their rival schools. AthleteJuvo also helps injured athletes meet nearby injured athletes and connect back with their non-injured team members by sending challenges. To aid in recovery, AthleteJuvo uses wearable sensing fabric which collects and report movement data to the athlete’s therapist.</p>
+        <div class="contribution">
+        <h2>My Contribution</h2>
+        <p>I led the brainstorming and data analysis session; contributed to the UI design iteration, user research, and integrating the smart fabric solution.</p>
+    </div>
     </div>
 <div class="bg_ivory">    
     <div class="projectinfo">
@@ -87,9 +91,10 @@
         <p>Our goal is to help injured athletes overcome the psychological issues and strengthen the social support and information they need during their rehabilitation.</p>
 
         <div class="video">
-            <iframe width="956" height="537" src="https://www.youtube.com/embed/JOV5UEyty8c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/JOV5UEyty8c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 </div>
+
 <div class="bg_white">
         <h2>Design Process</h2>
         <h3>Understand the problems</h3>
@@ -225,6 +230,21 @@
 </div>
 
 
+<div class="bg_ivory">
+    <h2>Impact</h2>
+    <h3>Honorable Mention</h3>
+    <p>AthleteJuvo won the Honorable Mention at the UMSI ExpoSItion 2018 from 60+ teams. The design, though was not selected into the CHI student competition final round, got a lot of positive feedback from the reviewers.</p>
+    <div class="project_photowrap">
+            <div><img src="./imgs/Juvo_impact.png" alt="impact"></div>
+    </div>
+</div>
+
+<div class="bg_white">
+    <h2>Reflection</h2>
+    <p>What we could have done better is to think how the "non-injured team members” would benefit from using the app, and how to better motivate them for using it. We could also narrow the scope more, focusing on specified injury types. Also, due to the time constraints, we could not involve the therapist over the development and evaluation process.</p>
+</div>
+
+
 
         
 </div>
@@ -239,6 +259,6 @@
                     <p>Designed &amp; coded by Blair Shen &copy; 2018</p>
             </footer>
 
-               <script src="js/lightbox-plus-jquery.js"></script>
+            <script src="js/lightbox-plus-jquery.js"></script>
 </body>
 </html>
