--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </a>
             <div class="mix-details fadeIn-top">
                 <h3>AthleteJuvo</h3>
-                <p>Smart fabric rehab assistant</p>
+                <p>Smart rehab assistant</p>
             </div>
         </div>
 
