--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/lightbox.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title >Blair Shen</title>
 </head>
 
@@ -212,6 +213,17 @@
                 <p>Graphic &amp; UI playground</p>
         </div>
     </div>
+
+    <div class="mix design">
+            <a href="commonwealth.html" data-title="commonwealth" aria-label="commonwealth">
+                <div class="mix-overlay"></div>
+                <img src="imgs/d_commonwealth.png" alt="commonwealth">
+            </a>
+            <div class="mix-details fadeIn-top">
+                <h3>CommonWealth</h3>
+                <p>Event management and ticketing website</p>
+            </div>
+        </div>
 
     <div class="mix research">
         <a href="networking.html" data-title="Networking" aria-label="Networking">
