--- a/juvo.html
+++ b/juvo.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/lightbox.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title >Blair Shen | AthleteJuvo</title>
 </head>
 
@@ -183,50 +184,78 @@
 </div>
 <div class="bg_white">
         <h2>User testing</h2>
-        <h3>Paper Prototype</h3>
-        <p>We went through two iterations to test our design solutions. First, we created sketches and generated a paper prototype. We then invited 5 participants to test the prototype. The participants were asked to perform the following tasks, with our team members using a Wizard of Oz technique:</p>
+        <h3>Wizard of Oz</h3>
+        <p>We went through two iterations to test our design solutions. First, I created wireframes and printed it out as a paper prototype. I then invited 5 participants to test the prototype. The participants were asked to perform the following tasks, with our team members using a Wizard of Oz technique:</p>
         <ul>
             <li>Attaching the sensing fabric on any of their joints or muscles, and starting the rehabilitation exercise</li>
             <li>Checking their daily rehabilitation progress and team scores</li>
             <li>Checking nearby injured athletes and inviting them to do rehabilitation exercises together</li>
         </ul>
-
         <div class="project_photowrap">
-            <div><img src="./imgs/Juvo_paper1.png" alt="Paperprototype 1"></div>
-            <div><img src="./imgs/Juvo_paper2.png" alt="Paperprototype 2"></div>
+            <div><img src="./imgs/Juvo_ite1.png" alt="Paperprototype 1"></div>
+
         </div>
 
-        <h3>Feedback gained from Paper Prototype</h3>
+        <h3>Feedback gained from the wireframes</h3>
         <ul>
-            <li>Users liked the idea of AthleteJuvo because they felt the gaming solution does provide them the satisfaction of competition</li>
-            <li>They wish to get a greater sense of competition by having features such as taunting their rival schools</li>
-            <li>Besides daily progress, they wish to see their monthly or long-term progress as well</li>
-            <li>They wish to know the sports the other injured athletes play</li>
+            <li>Users pointed out that besides timer, the app should help with counting the repeats.</li>
+            <li>Besides to know the assigned exercises, they wanted to know team scores as well.</li>
+            <li>Besides connecting with each other, they hope there's a injured athletes community.</li>
+            <li>The app should have progress visualization.</li>
+            <li>They couldn't know other injured athletes' locations at a glance.</li>
+            <li>They wanted to know what kind of sports others play.</li>
         </ul>
 </div>
 
 <div class="bg_ivory">
-        <h2>Changes in wireframes</h2>
-        <p>Based on the feedback, we decided to add more statistics visualization to show the progress and add a feature that allows athletes to taunt rival teams and cheer for those in the same school. When other injured athletes are nearby, the application shows the sports they play.</p>
-        <h3>Changes in team achievement screen</h3>
+        <h2>Design refinement</h2>
+        <p>Based on the feedback, I made our second iteration. This time, participants could see the team scores, use the exercise counting, see others on a map, sports other athletes play, a forum feature, and a long-term progress visualization.</p>
         <div class="project_photowrap">
-            <div><img src="./imgs/Juvo_wire1.png" alt="wireframe 1"></div>
+            <div><img src="./imgs/Juvo_ite2.png" alt="wireframe 2"></div>
         </div>
+        <h3>Feedback gained from the prototype</h3>
+        <ul>
+            <li>Participants found the team scores were not easy to understand.</li>
+            <li>It's still hard to interpret other users' locations.</li>
+            <li>They also wanted a feature that can help them identify problems in their rehab exercises.</li>
+            <li>The rehab progress visualization was great, but weekly progress is not long enough to see much difference.</li>
+        </ul>
+</div>
 
-        <h3>Changes in the stats screen</h3>
+<div class="bg_white">
+    <h2>Design refinement from the mid-fi prototype</h2>
+        <p>We decided to add a recording feature, so the injured athletes can share their exercises with the community and ask for suggestions. I also added a calendar view of monthly progress visualization, and another way to present users on a map.</p>
         <div class="project_photowrap">
-            <div><img src="./imgs/Juvo_wire2.png" alt="wireframe 2"></div>
+            <div><img src="./imgs/Juvo_ite3.png" alt="wireframe 2"></div>
+        </div>
+        <h3>Feedback gained from the prototype</h3>
+        <ul>
+            <li>Participants like the feature that they can follow the animated instructions and record themselves at the same time.</li>
+            <li>They had no more trouble understanding the other users' location.</li>
+            <li>Calendar visualization provided more specific information, while the line graph summarized well of the rehab progress.</li>
+        </ul>
+        <h3>Decisions</h3>
+        <ul>
+            <li>Participants can decide whether they want to record the rehab exercise, the app would show the animation and the carema recording at the same time.</li>
+            <li>Using a calendr to keep a daily track is useful, but a line chart should be available when users want to check their long-term progress.</li>
+        </ul>
+</div>
+
+<div class="bg_ivory">
+    <h2>Style Guide</h2>
+    <div class="project_photowrap">
+            <div><img src="./imgs/Juvo_style.png" alt="Style guide"></div>
         </div>
 </div>
 
 <div class="bg_white">
-        <h1>Features</h1>
+        <h2>Final prototype</h2>
         <div class="project_photowrap">
-            <div><img src="./imgs/Juvo_feature.png" alt="Feature"></div>
+            <div><img src="./imgs/Juvo_screens.png" alt="Feature"></div>
         </div>
-</div>
-<div class="buttons"><a href="https://projects.invisionapp.com/share/J4FQT4Z9QT8#/screens" target="_blank">
-<button type="button" class="prototype_button">View Prototype</button></a>
+        <div class="buttons"><a href="https://www.figma.com/proto/bkbxtFdACywlI9sWZW14h8w5/AthleteJuvo?node-id=0%3A1&scaling=scale-down" target="_blank">
+        <button type="button" class="prototype_button">View Prototype</button></a>
+        </div>
 </div>
 
 
