--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </a>
         <div class="mix-details fadeIn-top">
                 <h3>Michigan ZoomIn</h3>
-                <p>Croudsourcing wildlife image recognition</p>
+                <p>Crowdsourcing wildlife image recognition</p>
         </div>
     </div>
 
