--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <div class = "mix_container"> 
 
 
-        <div class="mix design">
+    <div class="mix design">
             <a href="juvo.html" data-title="AthleteJuvo" aria-label="AthleteJuvo">
                 <div class="mix-overlay"></div>
                 <img src="imgs/d_juvo.png" alt="AthleteJuvo">
@@ -167,19 +167,7 @@
                 <h3>AthleteJuvo</h3>
                 <p>Smart rehab assistant</p>
             </div>
-        </div>
-
-
-    <!--<div class="mix design">
-        <a href="#" data-title="ARVR" aria-label="ARVR">
-            <div class="mix-overlay"></div>
-            <img src="imgs/d_arvr.png" alt="ARVR">
-        </a>
-        <div class="mix-details fadeIn-top">
-                <h3>AR/VR mini projects</h3>
-                <p>AR/VR mini design projects</p>
-        </div>
-    </div>-->
+    </div>
 
     <div class="mix design">
         <a href="spsc.html" data-title="SPSC" aria-label="SPSC">
@@ -189,6 +177,17 @@
         <div class="mix-details fadeIn-top">
                 <h3>St. Patrick Senior Center</h3>
                 <p>Website revamp project</p>
+        </div>
+    </div>
+
+    <div class="mix design">
+        <a href="arvr.html" data-title="ARVR" aria-label="ARVR">
+            <div class="mix-overlay"></div>
+            <img src="imgs/d_arvr.png" alt="ARVR">
+        </a>
+        <div class="mix-details fadeIn-top">
+                <h3>AR/VR mini projects</h3>
+                <p>AR/VR mini design projects</p>
         </div>
     </div>
 
@@ -270,14 +269,17 @@
     </div>-->
   </div>
 <div class="bg_ivory">
- <div class = "greeting">
-        <img src="imgs/Home_1.png" class = "roundphoto" alt = "profile picture"/>   
+    <div class = "greeting">
+        <img src="imgs/Home_1.png" class = "roundphoto" alt = "profile picture"/>
+        <h1>A little bit about me… just a little, I promise.</h1>   
         <p>I’m a master’s student specializing in UX design and research at the University of Michigan. Before coming to the States, I worked closely with Yahoo for 2 years as a usability specialist at NCTU Communication and Cognition Lab in Taiwan. In addition to my experience in the UX field, I also worked as an online marketing intern at an industrial automation company during my undergrad, and as a social media coordinator at a SaaS startup. Years of training in UX, marketing , and social science fields allows me to pinpoint user’s needs with business values in mind and excel at both design skills and user data analysis.</p>
     </div>
 
+    <div class = "card_title">
+            <h2>I earn my bread and butter by…</h2>
+    </div>
 
 <div class="card_wrap">
-
     <div class="card card1">
       <img src="imgs/card1.png" alt="card1">
       <div class="card_container">
@@ -319,16 +321,16 @@
 
         <form action="https://formspree.io/yuyshen@umich.edu" method="POST" />
 
-        <label for="name">First Name</label>
+        <label for="name">Who's this?</label>
         <input type="text" id="name" name="name" placeholder="Your name.."><br>
         <p class="errormsg" id="nameerrormsg">Please enter your name above!</p>
 
         <label for="email">Email</label>
-        <input type="text" id="email" name="email" placeholder="Your Email.."><br>
+        <input type="text" id="email" name="email" placeholder="Your email address goes here, nothing special."><br>
         <p class="errormsg" id="emailerrormsg">Please enter your email address!</p>
 
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
+        <label for="subject">Whisper something</label>
+        <textarea id="subject" name="subject" placeholder="Whisper something here.. It's okay, I won't tell anyone!"></textarea>
 
         <input type="submit" value="Submit">
 
