--- a/juvo.html
+++ b/juvo.html
@@ -84,6 +84,9 @@
                 <li>The inconvenient methods of getting advice from athletes with similar experience</li>
                 <li>The inability to understand their rehab progress</li>
             </ul></p>
+            <div class="project_photowrap">
+            <div><img src="./imgs/Juvo_news.png" alt="CommonWealth preface"></div>
+        </div>  
 </div>
 
 <div class="bg_ivory">
@@ -97,8 +100,8 @@
 </div>
 
 <div class="bg_white">
-        <h2>Design Process</h2>
-        <h3>Understand the problems</h3>
+        <h1>Design Process</h1>
+        <h2>Understand the problems</h2>
         <p>To understand the problems injured athletes encountered in a broader sense, we conducted an online survey where the access was limited to injured athletes only; and held semi-structured interviews, including expert interviews and interviews with injured athletes.</p>    
         <div class="stats">
             <p class="number">87<br>Survey responses</p>
@@ -111,6 +114,12 @@
             <div><a href="imgs/Juvo_interview1.png" data-lightbox="gallery" data-title="Interview photo with the physician" aria-label="Interview photo with the physician"><img src="./imgs/Juvo_interview1_thumb.png" alt="data"></a></div>
             <div><a href="imgs/Juvo_interview2.png" data-lightbox="gallery" data-title="Rehab instructions" aria-label="Rehab instructions"><img src="./imgs/Juvo_interview2_thumb.png" alt="data"></a></div>
             <div><a href="imgs/Juvo_interview3.png" data-lightbox="gallery" data-title="Paper document in the rehab center" aria-label="Paper document in the rehab center"><img src="./imgs/Juvo_interview3_thumb.png" alt="data"></a></div>
+        </div>
+        <h2>Survey respondants profile</h2>
+        <div class="project_photowrap">
+            <div><img src="./imgs/Juvo_profile1.png" alt="Profile1"></a></div>
+            <div><img src="./imgs/Juvo_profile2.png" alt="Profile2"></a></div>
+            <div><img src="./imgs/Juvo_profile3.png" alt="Profile3"></a></div>
         </div>
 </div>
 
@@ -137,7 +146,13 @@
             <li>They seek help from people who have similar experiences.</li>
             <li>They can't monitor the rehab progress well by paper-based tracking sheets.</li>
             <li>Not seeing the recovery progress sometimes leads to motivation lost.</li>
+            <li>Besides the conclusion drew from our own data, I reviewed previous research from Stanford and made sure we focused on the right problem.</li>
         </ul>
+        <div class="project_photowrap">
+            <div><a href="imgs/Juvo_stanford1.png" data-lightbox="gallery" data-title="Standford study" aria-label="Standford study"><img src="./imgs/Juvo_stanford1_thumb.png" alt="Standford study"></a></div>
+            <div><a href="imgs/Juvo_stanford2.png" data-lightbox="gallery" data-title="Standford study" aria-label="Standford study"><img src="./imgs/Juvo_stanford2_thumb.png" alt="Standford study"></a></div>
+            <div><a href="imgs/Juvo_stanford3.png" data-lightbox="gallery" data-title="Standford study" aria-label="Standford study"><img src="./imgs/Juvo_stanford3_thumb.png" alt="Standford study"></a></div>
+        </div>
 </div>
 <div class="bg_ivory">
         <h2>User Journey</h2>
@@ -148,7 +163,7 @@
 </div>
 <div class="bg_white">
         <h2>Brainstorming &amp; Storyboard</h2>
-        <p>Based on our research findings, I host the brainstorming meeting with my teammates. We started to ideate solutions by mind mapping. We also made storyboards to see problems from the users' perspective. The final focus was to build a community for injured athletes to talk, meet up and share information.</p>
+        <p>Based on our research findings, I led the brainstorming meeting with my teammates. I utilized the technique called <b>"How Might We"</b> to provoke thoughts. After everyone wrote down the "how might we" questions, each of us listed ideas and their pros and cons. We also made storyboards to see problems from the users' perspective. The final focus was to build a community for injured athletes to talk, meet up and share information.</p>
         <div class="project_photowrap">
             <div><a href="imgs/Juvo_brain.png" data-lightbox="gallery" data-title="Brainstorming" aria-label="Brainstorming"><img src="./imgs/Juvo_brain.png" alt="Brainstorming"></a></div>
             <div><a href="imgs/Juvo_story.png" data-lightbox="gallery" data-title="Storyboard" aria-label="Storyboard"><img src="./imgs/Juvo_story.png" alt="Storyboard"></a></div>
