--- a/commonwealth.html
+++ b/commonwealth.html
@@ -45,7 +45,10 @@
         <div class="bg_white">
         <h1 class="main-content" tabindex="-1">CommonWealth Magazine Group</h1>
         <h2>How to better engage readers in the digital era?</h2>
-        <p>CommonWealth Magazine Group has huge numbers of events, workshops, and talks every month, yet bussiness units lack a platform to gather all participants' information and a convenient way to sell tickets or vouchers. Thus Digital Innovation Department decided to create a website as CommonWealth's events platform, and a way to interact with readers/customers/event participants.</p>
+        <p>In the summer of 2015 I was selected from a large pool of applicants for an internship at CommonWealth,
+            one of the most prestigious Asian magazines known for its concern about humanistic and political-economic
+            issues. As a UX design assistant I learned how traditional media outlets can use advanced technologies to
+            enhance communication with their audiences. CommonWealth Magazine Group has huge numbers of events, workshops, and talks every month, yet bussiness units lack a platform to gather all participants' information and a convenient way to sell tickets or vouchers. Thus Digital Innovation Department decided to create a website as CommonWealth's events platform, and a way to interact with readers/customers/event participants.</p>
         <h2>My contribution</h2>
         <p>As the only UX design intern, I helped the department established UX design process. In less than 2 months, I was able to finish stakeholder interviews, competitive analysis, feature developing, low-fi prototyping, and user testing for the project.</p>
 </div>
