--- a/spsc.html
+++ b/spsc.html
@@ -226,6 +226,7 @@ I drafted and customized every discussion guide before each interview. To totall
                     <a href="https://www.linkedin.com/in/yu-yin-shen/" class = "footer-icon" aria-label="Blair's LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="mailto:yuyshen@umich.edu" class = "footer-icon" aria-label="Blair's email"><i class="far fa-envelope"></i></a>
                     <a href="https://medium.com/@blairshen_2615" class = "footer-icon" aria-label="Blair's medium"><i class="fab fa-medium-m"></i></a>
+                    <a href="https://github.com/yuyinshen719" class = "footer-icon" aria-label="Blair's github"><i class="fab fa-github"></i></a>
                 </div>
                 
                     <p>Designed &amp; coded by Blair Shen &copy; 2018</p>
