--- a/graphic.html
+++ b/graphic.html
@@ -50,6 +50,18 @@
     </div>
 
     <div class="item">
+      <a href="./imgs/UI_MeeMu.png" data-lightbox="gallery" data-title="Group communication tool in outdoor concerts" aria-label="Group communication tool in outdoor concerts">
+        <img src="imgs/UI_MeeMu_thumb.png" alt="Group communication tool in outdoor concerts">
+      </a>
+    </div>
+
+    <div class="item">
+      <a href="./imgs/UI_Out.png" data-lightbox="gallery" data-title="Outdoor activity coach/partners matching app" aria-label="Outdoor activity coach/partners matching app">
+        <img src="imgs/UI_Out_thumb.png" alt="Outdoor activity coach/partners matching app">
+      </a>
+    </div>
+
+    <div class="item">
       <a href="./imgs/UI_2.png" data-lightbox="gallery" data-title="Eufy smart light redesign - edit schedule" aria-label="Eufy smart light redesign - edit schedule">
         <img src="imgs/UI_2_thumb.png" alt="Eufy smart light redesign - edit schedule">
       </a>
