--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/lightbox.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="imgs/x-icon">
-    <link rel="icon" href="favicon.ico" type="imgs/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title >Blair Shen</title>
 </head>
 
@@ -180,6 +180,17 @@
         </div>
     </div>
 
+    <div class="mix research">
+        <a href="yahoo.html" data-title="yahoo" aria-label="yahoo">
+            <div class="mix-overlay"></div>
+            <img src="imgs/r_yahoo.png" alt="yahoo">
+        </a>
+        <div class="mix-details fadeIn-top">
+                <h3>Yahoo Native Ads Study</h3>
+                <p>Mixed methods usability study</p>
+        </div>
+    </div>
+
     <div class="mix design">
         <a href="arvr.html" data-title="ARVR" aria-label="ARVR">
             <div class="mix-overlay"></div>
@@ -187,7 +198,7 @@
         </a>
         <div class="mix-details fadeIn-top">
                 <h3>AR/VR mini projects</h3>
-                <p>AR/VR mini design projects</p>
+                <p>A VR design inspiration guide & <br>Amazon AR view redesign</p>
         </div>
     </div>
 
@@ -231,7 +242,7 @@
         </a>
         <div class="mix-details fadeIn-top">
                 <h3>Networking study</h3>
-                <p>Online job boards UX study</p>
+                <p>A UX study for online job boards</p>
         </div>
     </div>
 
@@ -242,7 +253,7 @@
         </a>
         <div class="mix-details fadeIn-top">
                 <h3>Michigan ZoomIn</h3>
-                <p>Crowdsourcing wildlife image recognition</p>
+                <p>A usability study for a crowdsourcing service</p>
         </div>
     </div>
 
