--- a/networking.html
+++ b/networking.html
@@ -309,13 +309,13 @@ The survey contained 13 questions, mainly to get an idea about what services stu
 </main>
             <footer class="footer">
                 <div class="icons">
-                    <a href="https://www.linkedin.com/in/yu-yin-shen/" class = "footer-icon" aria-label="Blair's LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/yu-yin-shen/" class = "footer-icon" aria-label="Blair's LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     <a href="mailto:yuyshen@umich.edu" class = "footer-icon" aria-label="Blair's email"><i class="far fa-envelope"></i></a>
-                    <a href="https://medium.com/@blairshen_2615" class = "footer-icon" aria-label="Blair's medium"><i class="fab fa-medium-m"></i></a>
-                    <a href="https://github.com/yuyinshen719" class = "footer-icon" aria-label="Blair's github"><i class="fab fa-github"></i></a>
+                    <a href="https://medium.com/@blairshen_2615" class = "footer-icon" aria-label="Blair's medium" target="_blank"><i class="fab fa-medium-m"></i></a>
+                    <a href="https://github.com/yuyinshen719" class = "footer-icon" aria-label="Blair's github" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
                 
-                    <p>Designed &amp; coded by Blair Shen &copy; 2018</p>
+                    <p>Designed &amp; coded by Blair Shen &copy; 2019</p>
             </footer>
 
                <script src="js/lightbox-plus-jquery.js"></script>
