--- a/graphic.html
+++ b/graphic.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="item">
-      <a href="./imgs/UI_Workut.png" data-lightbox="gallery" data-title="Red Effect Workout Summary Redesign" aria-label="Red Effect Workout Summary Redesign">
+      <a href="./imgs/UI_Workout.png" data-lightbox="gallery" data-title="Red Effect Workout Summary Redesign" aria-label="Red Effect Workout Summary Redesign">
         <img src="imgs/UI_Workout_thumb.png" alt="Red Effect Workout Summary Redesign">
       </a>
     </div>
