--- a/juvo.html
+++ b/juvo.html
@@ -283,6 +283,31 @@
         <div class="project_photowrap">
             <div><img src="./imgs/Juvo_screens.png" alt="Feature"></div>
         </div>
+        <h3>Inspiring your peers</h3>
+        <p>We added a camera recording feature inside the app, because for users, it’s very encouraging to see other people are going through the injured period and accomplish these tasks! Users can choose to record their rehab or not, then save loaclly, or upload to the forum so they can inspire someone else, too!</p>
+        <div class="project_photowrap">
+            <div><img src="./imgs/juvo1.gif" alt="impact"></div>
+        </div>
+
+        <h3>Engaging with your non-injured teammates</h3>
+        <p>The user can invite their non-injured teammates to join the challenges as well. This helps initiate more interaction while the user is injured, and provide more chance for team bonding during rehab.</p>
+        <div class="project_photowrap">
+            <div><img src="./imgs/juvo2.gif" alt="impact"></div>
+        </div>
+
+        <h3>Seeing the progress</h3>
+        <p>Through the user research, we understand that being able to see the progress between check-ups is important. The stats feature will record the data from the fabric and show the user's progress. Users can manually input data as well, providing more flexibility.</p>
+        <div class="project_photowrap">
+            <div><img src="./imgs/juvo3.gif" alt="impact"></div>
+        </div>
+
+        <h3>Connecting with the community</h3>
+        <p>The “show nearby injured athletes" empowers users to connect with people who are currently in the same situation and provides the opportunity to look out for each other.</p>
+        <div class="project_photowrap">
+            <div><img src="./imgs/juvo4.gif" alt="impact"></div>
+        </div>
+
+
         <div class="buttons"><a href="https://www.figma.com/proto/bkbxtFdACywlI9sWZW14h8w5/AthleteJuvo?node-id=0%3A1&scaling=scale-down" target="_blank">
         <button type="button" class="prototype_button">View Prototype</button></a>
         </div>
