--- a/spsc.html
+++ b/spsc.html
@@ -92,11 +92,11 @@
         <p>In 1973, Sister Mary Watson opened the doors of St. Patrick Senior Center to seven elderly residents of Detroit’s Cass Corridor neighborhood and served a home-cooked, healthy meal. Today St. Patrick Senior Center has evolved into a comprehensive health and wellness program that provides valuable services including nutritious meals, an excellent health maintenance clinic, and transportation assistance to a diverse population of seniors age 55 and older. They offer educational classes in art, technology, exercise and dancing, healthy living and social activities.</p>
 
         <h2>Problem Overview</h2>
-        <p>St. Patrick Senior Center's previous website was built over a decade ago. The information architecture of the website was chaotic and staff members had a hard time maintaining the website. They also hope to gain marketing insights from Google Trends and have a new website that reflects the needs of their target audience.</p>
+        <p>St. Patrick Senior Center's previous website was built over decades ago. The information architecture of the website was chaotic and staff members had a hard time maintaining the website. They also hope to gain marketing insights from Google Trends and have a new website that reflects the needs of their target audience.</p>
 </div>
     <div class="bg_ivory">
         <h2>Website - Before Revamp</h2>
-        <p>The following screenshots show the previous homepage of the website. The most obvious problem was that there're too many texts and important information was hidden deeply in the sidebar. Most of the information that members need were presented by hyperlinked PDF files. The color combination didn't reflect the center's character, and the website was not responsive - which means it's not friendly to older adults who can only access to mobile phones instead of desktop computers/laptops.</p>    
+        <p>The following screenshots show the previous homepage of the website. The most obvious problem was that there're <b>too many texts and important information was hidden deeply in the sidebar.</b> Most of the information that members need were presented by hyperlinked PDF files. The color combination didn't reflect the center's character, and the website was not responsive - <b>which means it's not friendly to older adults in lower SES who can only access to mobile phones instead of desktop computers/laptops.</b></p>    
 
         <div class="project_photowrap">
             <div><a href="imgs/spsc_old1.png" data-lightbox="gallery" data-title="Homepage before revamp 1" aria-label="Homepage before revamp 1"><img src="./imgs/spsc_old1_thumb.png" alt="Homepage before revamp 1"></a></div>
@@ -107,9 +107,9 @@
 <div class="bg_white">
         <h1>Design Process</h1>
         <h2>Contextual inquiry & interview</h2>
-        <p>To further understand how staff members streamline their tasks and what information is the most important to their members, I conducted several interviews and observation at their workplaces. My interviewees included: the administrative assistant, a long-time donor, several members/volunteers, the benefits specialist, the activities director, an activities assistant, the community living support director, and a caregiver. The reason why I chose to interview those staff members was because they interacted with members frequently and had the most knowledge about the center. The rest of the interviewees represented the major audience of the senior center.
+        <p>To further understand how staff members streamline their tasks and what information is the most important to their members, I conducted several interviews and observation at their workplaces. My interviewees included: the administrative assistant, a long-time donor, several members/volunteers, the benefits specialist, the activities director, an activities assistant, the community living support director, and a caregiver. The reason why I chose to interview those staff members was because they interacted with the members frequently and had the most knowledge about the center. The rest of the interviewees represented the major audience of the senior center.
 
-I drafted and customized every discussion guide before each interview. To totally immerse myself in the senior center, I also joined and observed their activities. Between breaks, I usually walked around and chatted with members, asking about their motivation to join the center and what kind of services they used or activities they attained. Before interviewing staff members, I usually spent quite awhile at their workspace observing and taking notes.</p>
+I drafted and customized every discussion guide before each interview. <b>To get the firsthand information, I also joined and observed their activities. Between breaks, I usually walked around and chatted with members, asking about their motivation to join the center and what kind of services they tried or activities they attained.</b> Before interviewing staff members, I usually spent quite awhile at their workspace observing and taking notes.</p>
 </div>
 <div class="bg_ivory">
         <h2>Insights from the interview</h2>
@@ -163,11 +163,13 @@ I drafted and customized every discussion guide before each interview. To totall
 <div class="bg_ivory">
         <h2>Persona</h2>
         <p>To capture the essence of the center's website target audience, I made 3 personas based on my interview and contextual inquiry findings. One interesting thing worths noticing is that a user's roles may overlapped from time to time. In the senior center, a lot of older-middle aged caregivers were volunteers or donors, too.</p>
-<div class="project_photowrap">
+        <div class="project_photowrap">
             <div><a href="imgs/spsc_persona1.png" data-lightbox="gallery" data-title="Persona: Tech-savvy seniors" aria-label="Persona: Tech-savvy seniors"><img src="./imgs/spsc_persona1_thumb.png" alt="Persona: Tech-savvy seniors"></a><p>Tech-savvy seniors</p></div>
             <div><a href="imgs/spsc_persona2.png" data-lightbox="gallery" data-title="Persona: Caregivers" aria-label="Persona: Caregivers"><img src="./imgs/spsc_persona2_thumb.png" alt="Persona: Caregivers"></a><p>Caregivers</p></div>
             <div><a href="imgs/spsc_persona3.png" data-lightbox="gallery" data-title="Persona: Volunteers/donors" aria-label="User Journey"><img src="./imgs/spsc_persona3_thumb.png" alt="Persona: Volunteers/donors"></a><p>Volunteers/donors</p></div>
         </div>
+        <p><b>Always keep your users in mind</b> is important during the product development process. Personas can help us answer questions when we are not sure about certain design decisions.
+</p>
 </div>
 <div class="bg_white">
         <h2>Interaction Map - Before Revamp</h2>
