--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>-->
 
     <h1 class="typer">{
-            <span class="txt-type" data-wait="2000" data-words='["I design therefore I am","我設計故我在", "私はデザイナーです"]'></span> }
+            <span class="txt-type" data-wait="1000" data-words='["Think BIG","Start SMALL","Move FAST","Make an IMPACT !"]'></span> }
     </h1> 
 
     <div class="svg_wrapper">
