--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>-->
 
     <h1 class="typer">{
-            <span class="txt-type" data-wait="1000" data-words='["Think big","Start small","Move fast","Make an impact","I design therefore I am"]'></span> }
+            <span class="txt-type" data-wait="1000" data-words='["Think Big","Start Small","Move Fast","Make an Impact","I design therefore I am"]'></span> }
     </h1> 
 
     <div class="svg_wrapper">
