--- a/spsc.html
+++ b/spsc.html
@@ -44,7 +44,7 @@
             <li><a href = "index.html" ><div class="header-item">Works</div></a></li>
             <li><a href = "graphic.html" ><div class="header-item">Playground</div></a></li>
             <li><a href = "about.html" ><div class="header-item">About</div></a></li>
-            <li><a href = "https://drive.google.com/file/d/1SThQ2QbNLiq0RWdnlaT6lGH4zGSbsGfE/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
+            <li><a href = "https://drive.google.com/file/d/18w1oRWLLk_Mq6Bys3CYqmiMeYtuNx90U/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
          </ul>
         
     </nav>
@@ -222,9 +222,25 @@ I drafted and customized every discussion guide before each interview. <b>To get
 
 </div>
 <div class="bg_white">
-        <h2>Mid Fidelity Prototype</h2>
+        <h2>High Fidelity</h2>
         <div class="project_photowrap">
-            <div><img src="./imgs/spsc_mid.png" alt="homepage redesign"></a></div>
+            <div><img src="./imgs/spsc_device.png" alt="homepage redesign"></a></div>
+        </div>
+        <h3>Home - Desktop</h3>
+        <div class="project_photowrap">
+            <div><img src="./imgs/spsc_new_home.png" alt="new homepage"></a></div>
+        </div>
+        <h3>Senior Service - Desktop</h3>
+        <div class="project_photowrap">
+            <div><img src="./imgs/spsc_new_service.png" alt="new service page"></a></div>
+        </div>
+        <h3>Home - Mobile</h3>
+        <div class="project_photowrap">
+            <div><img src="./imgs/spsc_new_home_mobile.png" alt="new home mobile"></a></div>
+        </div>
+        <h3>Senior Service - Mobile</h3>
+        <div class="project_photowrap">
+            <div><img src="./imgs/spsc_new_service_mobile.png" alt="new home mobile"></a></div>
         </div>
 </div>
 
