--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     <nav class="header-nav">
         <ul>
-            <li><a href = "index.html" ><div class="header-item">Works</div></a></li>
+            <li><a href = "#home_h1" ><div class="header-item">Works</div></a></li>
             <li><a href = "graphic.html" ><div class="header-item">Playground</div></a></li>
             <li><a href = "about.html" ><div class="header-item">About</div></a></li>
-            <li><a href = "https://drive.google.com/file/d/1SThQ2QbNLiq0RWdnlaT6lGH4zGSbsGfE/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
+            <li><a href = "https://drive.google.com/file/d/18w1oRWLLk_Mq6Bys3CYqmiMeYtuNx90U/view?usp=sharing" target="_blank"><div class="header-item">Resume</div></a></li>
          </ul>
         
     </nav>
@@ -163,7 +163,7 @@
     </div>
  
 
-<h1 class="home_h1">Selected Projects</h1>
+<h1 id="home_h1">Selected Projects</h1>
 
   <div class="buttons">
         <button type="button" class="button" data-filter="all">All</button>
