--- a/juvo.html
+++ b/juvo.html
@@ -137,7 +137,7 @@
 
 <div class="bg_ivory">
     <h2>Fact checking - Survey</h2>
-        <p>We then onducted an online survey which served as a fact checking tool, to know how much can we generalize the findings from interviews. The survey access was limited to injured athletes only.</p>
+        <p>We then conducted an online survey which served as a fact checking tool, to know how much can we generalize the findings from interviews. The survey access was limited to injured athletes only.</p>
         <ul>
             <li>There were <b>96.5%</b> of the respondents who replied that the injury affected their <b>psychological well-being</b>; 92% of them reported suffering from depression and isolation during their rehabilitation</li>
         </ul>
